--- a/wprostychslowach/pom.xml
+++ b/wprostychslowach/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0</version>
     <modules>
         <module>polymorphism</module>
+        <module>abstraction</module>
     </modules>
     <build>
         <plugins>
