Simple example of generics

--- a/wprostychslowach/pom.xml
+++ b/wprostychslowach/pom.xml
@@ -15,6 +15,7 @@
         <module>ifitizm</module>
         <module>designbycontract</module>
         <module>dependencyinversion</module>
+        <module>generics</module>
     </modules>
     <build>
         <plugins>
